--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,5 @@
+// common style
+
 @import "partials/colors";
 @import "partials/variables";
 
@@ -9,4 +11,71 @@
 
 body {
   font-family: $font-rale;
+
+  ul {
+    list-style: none;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+}
+
+// inizio style header
+
+.menu {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  -webkit-box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.67);
+  box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.17);
+
+  &-container {
+    @include container-centred;
+    padding: 20px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .logo {
+      width: 227px;
+      cursor: pointer;
+
+      img {
+        width: 100%;
+      }
+    }
+
+    .link {
+      display: flex;
+      align-items: center;
+
+      li {
+        transition: $hover;
+        font-family: $font-mont;
+        text-transform: uppercase;
+        font-size: 14px;
+        font-weight: 300;
+        margin-left: 45px;
+
+        a:focus,
+        a:hover {
+          color: $primary-color;
+          transition: $hover;
+        }
+
+        &:last-child {
+          cursor: pointer;
+          background: $primary-color;
+          padding: 13px 29px;
+
+          &:hover {
+            background: $secondary-color;
+            color: #fff;
+          }
+        }
+      }
+    }
+  }
 }
