--- a/src/app.scss
+++ b/src/app.scss
@@ -30,13 +30,12 @@ body {
   top: 0;
   -webkit-box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.67);
   box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.17);
+  background: #fff;
 
   &-container {
     @include container-centred;
+    @include flex-centred;
     padding: 20px 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
 
     .logo {
       width: 227px;
@@ -73,6 +72,70 @@ body {
           &:hover {
             background: $secondary-color;
             color: #fff;
+          }
+        }
+      }
+    }
+  }
+}
+
+.jumbotron {
+  background: $bg-home no-repeat center center;
+  background-size: cover;
+  height: calc(100vh - 122px);
+  margin-top: 122px;
+
+  &-container {
+    @include container-centred;
+    height: 100%;
+    display: flex;
+
+    .row {
+      margin: auto;
+      text-align: center;
+
+      h1 {
+        font-size: 60px;
+        text-transform: uppercase;
+        color: #fff;
+        font-weight: 700;
+      }
+
+      h2 {
+        font-size: 24px;
+        color: $primary-color;
+        font-weight: 400;
+        padding: 20px 0;
+      }
+
+      .buttons {
+        display: flex;
+        justify-content: center;
+
+        .button {
+          font-size: 18px;
+          font-weight: 400;
+          letter-spacing: 2px;
+          color: #fff;
+          text-transform: uppercase;
+          padding: 17px 40px;
+          background-color: $secondary-color;
+          margin: 10px;
+          transition: $hover;
+
+          &:hover {
+            background-color: $primary-color;
+            color: $secondary-color;
+          }
+
+          &:last-child {
+            background-color: $primary-color;
+            color: $secondary-color;
+
+            &:hover {
+              background-color: $secondary-color;
+              color: #fff;
+            }
           }
         }
       }
