--- a/src/app.scss
+++ b/src/app.scss
@@ -101,7 +101,7 @@ body {
         font-weight: 700;
       }
 
-      h2 {
+      h3 {
         font-size: 24px;
         color: $primary-color;
         font-weight: 400;
@@ -137,6 +137,153 @@ body {
               color: #fff;
             }
           }
+        }
+      }
+    }
+  }
+}
+
+.bunner {
+  background-color: $primary-color;
+
+  &-container {
+    @include container-centred;
+    text-align: center;
+    padding: 50px 30px;
+
+    h2 {
+      font-size: 32px;
+      font-weight: 400;
+      color: #333;
+    }
+  }
+}
+
+.free-quote {
+  margin-top: -22px;
+  display: flex;
+  justify-content: center;
+
+  .button {
+    background: $secondary-color;
+    font-size: 14px;
+    text-transform: uppercase;
+    padding: 13px 29px;
+    color: #fff;
+    letter-spacing: 2px;
+    border: 2px solid #fff;
+    transition: $hover;
+
+    &:hover {
+      background: #fff;
+      color: $secondary-color;
+      border: 2px solid $secondary-color;
+    }
+  }
+}
+
+// fine style header
+
+// inizio style main
+
+.skills {
+  &-container {
+    @include container-centred;
+    text-align: center;
+
+    .description {
+      padding: 100px 0 80px 0;
+
+      h3 {
+        @include style-h3;
+      }
+
+      hr {
+        margin: 25px auto;
+        border: 1px solid $primary-color;
+        border-radius: 10px;
+        width: 206px;
+      }
+
+      p {
+        margin: 0 auto;
+        @include style-p;
+        width: 800px;
+      }
+    }
+
+    .cards {
+      padding-bottom: 80px;
+      display: flex;
+
+      .flip-card {
+        position: relative;
+        background-color: transparent;
+        width: 300px;
+        height: 365px;
+        perspective: 1000px;
+        padding: 20px;
+
+        &-inner {
+          position: relative;
+          width: 100%;
+          height: 100%;
+          text-align: center;
+          transition: transform 0.8s;
+          transform-style: preserve-3d;
+          transition: all 0.2s ease-in-out;
+        }
+
+        &:hover .flip-card-inner {
+          transform: rotateY(180deg);
+        }
+
+        &-front {
+          padding: 27px 20px;
+          border-radius: 10px;
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+          background-color: #f5f5f5;
+
+          .icon {
+            display: flex;
+            margin: 10px auto;
+            height: 64px;
+            width: 64px;
+            border: 1px solid #747474;
+            border-radius: 50%;
+            background-clip: padding-box;
+            color: #747474;
+
+            i {
+              margin: auto;
+              font-size: 24px;
+            }
+          }
+
+          h3 {
+            @include style-h3;
+          }
+
+          p {
+            @include style-p;
+          }
+        }
+
+        &-back {
+          padding: 27px 20px;
+          border-radius: 10px;
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+          background-color: $primary-color;
+          color: $secondary-color;
+          transform: rotateY(180deg);
         }
       }
     }
