--- a/src/app.scss
+++ b/src/app.scss
@@ -22,9 +22,100 @@ body {
   }
 }
 
+// utility style
+
+.line-description {
+  margin: 25px auto;
+  border: 1px solid $primary-color;
+  border-radius: 10px;
+  width: 206px;
+}
+
+// separator style
+.separatore-top {
+  height: 100px;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+
+  &:after {
+    content: "";
+    position: absolute;
+    height: 550px;
+    left: -20%;
+    right: -20%;
+    border-radius: 50%;
+    top: -455px;
+    background: #fff;
+  }
+}
+
+.separatore-bottom {
+  height: 100px;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+
+  &:after {
+    content: "";
+    position: absolute;
+    height: 550px;
+    left: -20%;
+    right: -20%;
+    border-radius: 50%;
+    bottom: -455px;
+    background: #fff;
+  }
+}
+
+// layer effect
+.layer {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transform: scaleY(0);
+  top: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  background-color: $primary-color;
+  transition: all 0.3s ease-in-out;
+  color: #fff;
+
+  .icons {
+    i {
+      margin-right: 10px;
+      font-size: 20px;
+      border-radius: 50%;
+      color: $primary-color;
+      background-color: #fff;
+      padding: 15px;
+    }
+  }
+
+  h4 {
+    font-size: 18px;
+    font-weight: 400;
+    padding: 15px 0;
+  }
+
+  p {
+    font-size: 13px;
+    font-weight: 600;
+  }
+}
+.card:hover .layer {
+  height: 100%;
+  opacity: 1;
+  transform: scaleY(1);
+}
+
 // inizio style header
 
 .menu {
+  z-index: 999999;
   width: 100%;
   position: fixed;
   top: 0;
@@ -198,17 +289,8 @@ body {
         @include style-h3;
       }
 
-      hr {
-        margin: 25px auto;
-        border: 1px solid $primary-color;
-        border-radius: 10px;
-        width: 206px;
-      }
-
       p {
-        margin: 0 auto;
         @include style-p;
-        width: 800px;
       }
     }
 
@@ -217,19 +299,13 @@ body {
       display: flex;
 
       .flip-card {
-        position: relative;
-        background-color: transparent;
         width: 300px;
-        height: 365px;
+        min-height: 330px;
         perspective: 1000px;
         padding: 20px;
 
         &-inner {
           position: relative;
-          width: 100%;
-          height: 100%;
-          text-align: center;
-          transition: transform 0.8s;
           transform-style: preserve-3d;
           transition: all 0.2s ease-in-out;
         }
@@ -239,11 +315,9 @@ body {
         }
 
         &-front {
+          height: 100%;
           padding: 27px 20px;
           border-radius: 10px;
-          position: absolute;
-          width: 100%;
-          height: 100%;
           -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
           background-color: #f5f5f5;
@@ -270,15 +344,16 @@ body {
 
           p {
             @include style-p;
+            width: auto;
           }
         }
 
         &-back {
-          padding: 27px 20px;
+          height: 100%;
+          padding: 17px 20px;
           border-radius: 10px;
           position: absolute;
-          width: 100%;
-          height: 100%;
+          top: 0;
           -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
           background-color: $primary-color;
@@ -286,7 +361,7 @@ body {
           transform: rotateY(180deg);
 
           h4 {
-            padding-bottom: 20px;
+            padding-bottom: 10px;
             font-size: 18px;
             font-weight: 400;
             text-transform: uppercase;
@@ -294,6 +369,7 @@ body {
 
           p {
             @include style-p;
+            width: auto;
           }
 
           .button {
@@ -302,6 +378,7 @@ body {
             margin: 10px auto;
             background-color: #ffe07b;
             transition: $hover;
+            cursor: pointer;
 
             &:hover {
               background-color: $secondary-color;
@@ -310,6 +387,101 @@ body {
           }
         }
       }
+    }
+  }
+}
+
+.data-counter {
+  width: 100%;
+  background: url("../img/bg-data-section.jpg") no-repeat center center;
+  background-size: cover;
+
+  &-container {
+    @include container-centred;
+    height: 400px;
+    display: flex;
+
+    .data-box {
+      margin: auto;
+      text-align: center;
+      color: $primary-color;
+      font-weight: 500;
+
+      i {
+        font-size: 70px;
+      }
+
+      .number {
+        padding: 10px;
+        font-size: 60px;
+      }
+
+      p {
+        font-size: 18px;
+        color: #fff;
+      }
+    }
+  }
+}
+
+.work-container {
+  @include container-centred;
+
+  .description {
+    padding-top: 80px;
+    text-align: center;
+
+    h3 {
+      @include style-h3;
+    }
+
+    p {
+      @include style-p;
+    }
+  }
+
+  .cards {
+    padding: 80px 0;
+    display: flex;
+
+    .card {
+      cursor: pointer;
+      position: relative;
+      width: calc(100% / 3);
+      margin: 10px;
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+
+  .work-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 100px;
+
+    .btn-w {
+      text-align: center;
+      width: calc(100% / 3);
+      text-transform: uppercase;
+      font-weight: 300;
+      font-size: 14px;
+      letter-spacing: 2px;
+      padding: 13px 29px;
+      cursor: pointer;
+      transition: $hover;
+
+      &:hover {
+        background-color: $primary-color;
+      }
+    }
+
+    hr {
+      width: calc(100% / 3);
+      margin: 0 20px;
+      border: 1px solid #f5f5f5;
     }
   }
 }
