--- a/src/app.scss
+++ b/src/app.scss
@@ -83,6 +83,7 @@ body {
   background-color: $primary-color;
   transition: all 0.3s ease-in-out;
   color: #fff;
+  text-align: center;
 
   .icons {
     i {
@@ -110,6 +111,35 @@ body {
   height: 100%;
   opacity: 1;
   transform: scaleY(1);
+}
+
+.work-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 100px;
+
+  .btn-w {
+    text-align: center;
+    width: calc(100% / 3);
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 14px;
+    letter-spacing: 2px;
+    padding: 13px 29px;
+    cursor: pointer;
+    transition: $hover;
+
+    &:hover {
+      background-color: $primary-color;
+    }
+  }
+
+  hr {
+    width: calc(100% / 3);
+    margin: 0 20px;
+    border: 1px solid #f5f5f5;
+  }
 }
 
 // inizio style header
@@ -457,35 +487,6 @@ body {
       }
     }
   }
-
-  .work-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 100px;
-
-    .btn-w {
-      text-align: center;
-      width: calc(100% / 3);
-      text-transform: uppercase;
-      font-weight: 300;
-      font-size: 14px;
-      letter-spacing: 2px;
-      padding: 13px 29px;
-      cursor: pointer;
-      transition: $hover;
-
-      &:hover {
-        background-color: $primary-color;
-      }
-    }
-
-    hr {
-      width: calc(100% / 3);
-      margin: 0 20px;
-      border: 1px solid #f5f5f5;
-    }
-  }
 }
 
 .values {
@@ -588,7 +589,6 @@ body {
             }
 
             100% {
-              opacity: 0;
               transform: scale(1.5);
             }
           }
@@ -627,6 +627,14 @@ body {
 .testimonial {
   background: url(../img/bg-testimonial.jpg) no-repeat center center;
   background-size: cover;
+
+  .separatore-top::after {
+    background: #f5f5f5;
+  }
+
+  .separatore-bottom::after {
+    background: #f5f5f5;
+  }
 
   &-container {
     @include container-centred;
@@ -675,6 +683,93 @@ body {
         height: 9px;
         width: 9px;
         border-radius: 50%;
+        border: 1px solid #fff;
+      }
+    }
+  }
+}
+
+.project {
+  background: #f5f5f5;
+
+  &-container {
+    @include container-centred;
+
+    .description {
+      padding: 80px 0;
+      text-align: center;
+
+      h3 {
+        @include style-h3;
+      }
+
+      p {
+        @include style-p;
+      }
+    }
+
+    .project-cards {
+      display: flex;
+
+      .wrapper-card {
+        margin: 0 10px;
+        background: #fff;
+
+        width: calc(100% / 3);
+
+        .card {
+          position: relative;
+
+          .layer {
+            padding: 0 30px;
+          }
+
+          img {
+            width: 100%;
+          }
+        }
+      }
+
+      .description-card {
+        padding: 30px 25px 20px;
+
+        h5 {
+          color: #333;
+          font-size: 25px;
+          font-weight: 400;
+          transition: $hover;
+          padding-bottom: 7px;
+          letter-spacing: 2px;
+          line-height: 1.3;
+
+          &:hover {
+            color: $primary-color;
+            cursor: pointer;
+          }
+        }
+
+        span {
+          font-size: 12px;
+          color: #747474;
+          font-weight: 500;
+        }
+
+        hr {
+          border: 1px solid #eae8e8;
+          border-bottom: 0px;
+          margin: 20px 0;
+        }
+
+        p {
+          @include style-p;
+          width: auto;
+        }
+      }
+    }
+    .work-button {
+      padding: 80px 0;
+
+      hr {
         border: 1px solid #fff;
       }
     }
