--- a/src/app.scss
+++ b/src/app.scss
@@ -775,3 +775,99 @@ body {
     }
   }
 }
+
+.partners {
+  &-container {
+    padding: 80px 0;
+    @include container-centred;
+
+    .description {
+      text-align: center;
+
+      h3 {
+        @include style-h3;
+      }
+
+      p {
+        @include style-p;
+      }
+    }
+
+    .logo-container {
+      padding-top: 50px;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+
+      .logo-partners {
+        width: calc(100% / 5);
+        height: 115px;
+
+        img {
+          height: 100%;
+        }
+      }
+    }
+  }
+}
+
+.call-to-action {
+  background: url("../img/bg-footer.jpg") no-repeat center center;
+  background-size: cover;
+
+  &-container {
+    padding: 130px 0;
+    @include container-centred;
+    display: flex;
+    align-items: center;
+    color: #fff;
+
+    .description {
+      width: calc(100% / 3 * 2);
+      padding-right: 20px;
+
+      h3 {
+        font-size: 34px;
+        font-weight: 400;
+      }
+
+      .line-description {
+        margin: 30px 0;
+      }
+
+      p {
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 1.4;
+      }
+    }
+
+    .button-box {
+      text-align: center;
+      width: calc(100% / 3);
+
+      .button {
+        width: max-content;
+        margin: 0 auto;
+        padding: 17px 40px;
+        background: $primary-color;
+        font-size: 18px;
+        text-transform: uppercase;
+        color: #333;
+        transition: $hover;
+        cursor: pointer;
+
+        &:hover {
+          background: $secondary-color;
+          color: #fff;
+        }
+      }
+
+      p {
+        font-size: 15px;
+        font-weight: 500;
+        padding: 15px 0;
+      }
+    }
+  }
+}
