--- a/src/app.scss
+++ b/src/app.scss
@@ -871,20 +871,8 @@ body {
       width: calc(100% / 3);
 
       .button {
-        width: max-content;
+        @include primary-button-l;
         margin: 0 auto;
-        padding: 17px 40px;
-        background: $primary-color;
-        font-size: 18px;
-        text-transform: uppercase;
-        color: #333;
-        transition: $hover;
-        cursor: pointer;
-
-        &:hover {
-          background: $secondary-color;
-          color: #fff;
-        }
       }
 
       p {
@@ -912,11 +900,27 @@ footer {
   &-container {
     @include container-centred;
     display: flex;
-    
+
+    h4 {
+      font-family: $font-mont;
+      font-size: 15px;
+      color: $primary-color;
+      margin-bottom: 28px;
+      text-transform: uppercase;
+    }
 
     .box-slogan {
       width: calc(100% / 4);
-      padding: 0 15px;
+      padding: 0 25px;
+
+      .logo-footer {
+        padding-right: 30px;
+        width: 100%;
+
+        img {
+          width: 100%;
+        }
+      }
 
       p {
         font-size: 15px;
@@ -933,10 +937,49 @@ footer {
   }
 
   .box-tweet {
-     width: calc(100% / 4);
+    position: relative;
+    width: calc(100% / 4);
+    padding: 0 25px;
+
+    &:hover i {
+      color: #f5f8fa !important;
+    }
 
     .tweet-content {
+      position: relative;
       display: flex;
+      width: 100%;
+
+      .fusion-img {
+        height: 32px;
+        width: 32px;
+
+        img {
+          width: 100%;
+          border-radius: 50%;
+        }
+      }
+
+      p {
+        font-family: $font-mont;
+        padding: 0 10px;
+        font-weight: 300;
+
+        span {
+          font-weight: 600;
+          &:hover {
+            color: #3b94d9;
+          }
+        }
+      }
+
+      i {
+        color: #444;
+        font-size: 20px;
+        position: absolute;
+        right: 0;
+        top: 0;
+      }
     }
 
     .img-hub {
@@ -945,6 +988,110 @@ footer {
       img {
         width: 100%;
         border-radius: 10px;
+      }
+    }
+
+    p {
+      padding: 10px 0 30px 0;
+      font-weight: 500;
+      color: #fff;
+      font-size: 12px;
+      line-height: 18px;
+
+      a {
+        color: #3b94d9;
+      }
+    }
+
+    .icon-tweet {
+      display: flex;
+
+      i {
+        margin: 10px 30px 0 0;
+        color: #747474;
+        font-size: 16px;
+
+        &:first-child:hover {
+          color: red;
+        }
+
+        &:last-child:hover {
+          color: #3b94d9;
+        }
+      }
+    }
+
+    .time {
+      color: #3b94d9;
+      font-size: 12px;
+      position: absolute;
+      bottom: 0px;
+      right: 25px;
+    }
+  }
+
+  .box-contact {
+    width: calc(100% / 4);
+    padding: 0 25px;
+
+    .contact-content {
+      font-family: $font-rale;
+      display: flex;
+      padding-bottom: 10px;
+      color: #747474;
+
+      i {
+        font-size: 14px;
+        margin: 5px 15px 0 0;
+      }
+
+      p {
+        font-size: 14px;
+        line-height: 1.5;
+        font-weight: 600;
+      }
+    }
+  }
+
+  .box-map {
+    width: calc(100% / 4);
+    padding: 0 25px;
+
+    img {
+      width: 100%;
+    }
+  }
+}
+
+.bottom-bar {
+  background: #111111;
+  padding: 30px 0;
+  color: #747474;
+
+  &-container {
+    @include container-centred;
+    @include flex-centred;
+
+    .info {
+      font-size: 11px;
+
+      span {
+        font-weight: 700;
+
+        &:hover {
+          color: $primary-color;
+          cursor: pointer;
+        }
+      }
+    }
+
+    .social {
+      display: flex;
+
+      i {
+        margin: 0 10px;
+        font-size: 17px;
+        cursor: pointer;
       }
     }
   }
