--- a/src/app.scss
+++ b/src/app.scss
@@ -611,6 +611,7 @@ body {
 }
 
 .testimonial {
+  position: relative;
   .parallax-bg {
     height: 1000px;
     background-image: url("../img/bg-testimonial.jpg");
@@ -624,6 +625,10 @@ body {
     background: $bg-gray;
   }
 
+  &:nth-child(2) {
+    position: absolute;
+    top: 0;
+  }
   &-container {
     @include container-centred;
     text-align: center;
@@ -659,19 +664,27 @@ body {
       justify-content: center;
       padding-top: 20px;
 
-      .circle {
-        height: 10px;
-        width: 10px;
+      .circle-full {
+        cursor: pointer;
+        height: 12px;
+        width: 12px;
         border-radius: 50%;
         background-color: #fff;
+        margin: 0 5px;
       }
 
-      .circle-full {
-        margin-left: 10px;
-        height: 9px;
-        width: 9px;
+      .circle {
+        cursor: pointer;
+        margin: 0 5px;
+        height: 12px;
+        width: 12px;
         border-radius: 50%;
         border: 1px solid #fff;
+        transition: $hover;
+
+        &:hover {
+          background-color: #fff;
+        }
       }
     }
   }
@@ -1069,7 +1082,6 @@ footer {
 
   &:hover {
     background: $primary-color;
-
   }
 }
 
