--- a/src/app.scss
+++ b/src/app.scss
@@ -155,8 +155,16 @@ body {
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    transform: translate3d(0px, 0px, 0px);
+    transform: translate3d(0px, 0px, px);
   }
+}
+
+.active {
+  opacity: 1;
+}
+
+.disactive {
+  opacity: 0;
 }
 
 // fine style utility ---------------------------------------------
@@ -1083,12 +1091,4 @@ footer {
   &:hover {
     background: $primary-color;
   }
-}
-
-.active {
-  opacity: 1;
-}
-
-.disactive {
-  opacity: 0;
 }
